force-app/main/default/objects/ATestObject__c/ATestObject__c.object-meta.xml
<CustomObject>
    <pluralLabel>ATestObjects</pluralLabel>
    <fullName>ATestObject__c</fullName>
    <description>Test object for CI/CD demo</description>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <type>Text</type>
        <label>Name</label>
    </nameField>
    <label>ATestObject</label>
</CustomObject>