force-app/main/default/objects/ATestObject__c/fields/Test_Field_4__c.field-meta.xml
<CustomField>
    <fullName>Test_Field_4__c</fullName>
    <label>Test Field 4</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>