force-app/main/default/objects/ATestObject__c/fields/Testfield2__c.field-meta.xml
<CustomField>
    <fullName>Testfield2__c</fullName>
    <label>Testfield2__c</label>
    <length>25</length>
    <type>Text</type>
</CustomField>