force-app/main/default/objects/ATestObject__c/fields/Testfield__c.field-meta.xml
<CustomField>
    <fullName>testfield__c</fullName>
    <label>testfield__c</label>
    <length>28</length>
    <type>Text</type>
</CustomField>